--- a/MakonFM/root/index.tt
+++ b/MakonFM/root/index.tt
@@ -20,7 +20,12 @@
 
     [%- PROCESS 'subtitles.tt' | indent(4) %]
 
-    <input type="number" step="0.1" id="ts" />
+    [%# DEBUG %]
+    <input type="number" step="1" id="ts" value="0" />
+    <script>
+        $('#ts').click(function(){$(this).val($(this).val()-0+1);$(this).change();});
+        $('#ts').change(function(){MakonFM.upd_sub($(this).val());});
+    </script>
 
     <script type="text/javascript" src="/static/makonfm.js"></script>
 
