Subtitles are now displayed linewise; refs #1

--- a/MakonFM/root/static/makonfm.css
+++ b/MakonFM/root/static/makonfm.css
@@ -8,6 +8,11 @@ body {
 .track-menu  li > h3 {
     display: block;
 }
+.subtitles {
+    height: 66px;
+    overflow: hidden;
+    position: relative;
+}
 .subtitles .cur {
     text-decoration: underline;
 }
