--- a/MakonFM/root/static/makonfm.css
+++ b/MakonFM/root/static/makonfm.css
@@ -14,7 +14,7 @@ body {
     position: relative;
 }
 .subtitles .cur {
-    text-decoration: underline;
+    background-color: rgb(255,255,130);
 }
 body div.jp-audio {
     position: fixed;
