Started implementing wiki; refs #2

--- a/MakonFM/root/static/makonfm.css
+++ b/MakonFM/root/static/makonfm.css
@@ -23,8 +23,15 @@ body {
     overflow: hidden;
     position: relative;
 }
+.subtitles.edited {
+    height: auto;
+}
 .subtitles .cur {
     background-color: rgb(255,255,130);
+}
+.subedit {
+    display: block;
+    width: 100%;
 }
 body div.jp-audio {
     position: fixed;
