started writing send_subtitles function; refs #2
also some minor reformating

--- a/MakonFM/root/static/makonfm.css
+++ b/MakonFM/root/static/makonfm.css
@@ -40,7 +40,7 @@ body {
     color: #AAA;
 }
 .show-content-after:after {
-    content: " " attr(content_after);
+    content: " " attr(content-after);
     font-weight: bold;
     color: black;
 }
