--- a/MakonFM/root/index.tt
+++ b/MakonFM/root/index.tt
@@ -8,8 +8,7 @@
     <link href="/static/favicon.ico" rel="icon" type="image/ico" />
     <link rel="stylesheet" type="text/css" href="/static/makonfm.css" />
     <link rel="stylesheet" type="text/css" href="/static/jplayer-skins/jplayer.pink.flag.css" />
-    <!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script-->
-    <script type="text/javascript" src="/static/jquery.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script type="text/javascript" src="/static/jquery.jplayer.min.js"></script>
 </head>
 
