Now showing saved and aligned subtitles in browser; refs #2

--- a/MakonFM/root/static/makonfm.css
+++ b/MakonFM/root/static/makonfm.css
@@ -39,6 +39,9 @@ body {
 .word.corrected {
     color: #AAA;
 }
+.word.humanic {
+    font-weight: bold;
+}
 .show-content-after:after {
     content: " " attr(content-after);
     font-weight: bold;
