--- a/MakonFM/root/editor.tt
+++ b/MakonFM/root/editor.tt
@@ -1,7 +1,21 @@
 <div class="subedit Window" data-bind="visible: editation_active">
-    <!--div class="waveform">
-        <canvas></canvas>
-    </div-->
+    <div class="Time-control">
+        <div class="Window-edges">
+            <div class="Start">
+                <button data-bind="click: dec_window_start">-</button>
+                <input type="number" data-bind="value: window_start" />
+                <button data-bind="click: inc_window_start">+</button>
+            </div>
+            <div class="End">
+                <button data-bind="click: dec_window_end">-</button>
+                <input type="number" data-bind="value: window_end" />
+                <button data-bind="click: inc_window_end">+</button>
+            </div>
+        </div>
+        <!--div class="waveform">
+            <canvas></canvas>
+        </div-->
+    </div>
     <textarea data-bind="value: edited_subtitles.str" class="js-subedit"></textarea>
     <div class="Button-pane">
         <a class="Icn Play" title="přehrát" data-bind="click: play_window"   ></a>
