--- a/MakonFM/root/index.tt
+++ b/MakonFM/root/index.tt
@@ -16,6 +16,8 @@
 
 <body>
 
+    [%# <h1>Makoň.FM</h1> %]
+    [%# <p class="hint" data-bind="text: hint_message">Vyberte nahrávku</p> %]
     <div data-bind="css: { 'safe-hidden': editation_active() }">
         <div class="jplayer-safe-hider">
 
