typos in tracklist

--- a/MakonFM/root/tracklist.tt
+++ b/MakonFM/root/tracklist.tt
@@ -989,10 +989,10 @@
                     <li><a>kotouc-P01-b-1973-kaly.mp3</a></li>
                     <li><a>kotouc-P01-c.mp3</a></li>
                     <li><a>kotouc-P01-d-1973-kaly.mp3</a></li>
-                    <li><a>kotouc-R01-a-1974.mp3.mp3</a></li>
-                    <li><a>kotouc-R01-b-1974.mp3.mp3</a></li>
-                    <li><a>kotouc-R01-c-1974.mp3.mp3</a></li>
-                    <li><a>kotouc-R01-d-1974.mp3.mp3</a></li>
+                    <li><a>kotouc-R01-a-1974.mp3</a></li>
+                    <li><a>kotouc-R01-b-1974.mp3</a></li>
+                    <li><a>kotouc-R01-c-1974.mp3</a></li>
+                    <li><a>kotouc-R01-d-1974.mp3</a></li>
                     <li><a>kotouc-S01-a.mp3</a></li>
                     <li><a>kotouc-S01-b.mp3</a></li>
                     <li><a>kotouc-S01-c.mp3</a></li>
