Hashchange, random play and other enhancements
- Hash is now auto-updated based on interface clicks and toggle_playback method,
  i.e. it is now independent from jPlayer's pause event.
- Added support for hashchange event, so that changing the hash selects new file
  and position.
- When requested position is greater than what jPlayer status duration says,
  then the pause(pos) -> on seeked method of seeking is used. Otherwise
  play(pos) is used. This is great as long as jplayer.status.duration says where
  we are at downloading the file.
- Added event-catcher spans to jPlayer controls.
- Programatically changing hash is now wrapped to a function to be able to
  distinguish from human-caused hashchanges.
- current_file observable no longer has a subscriber -- all is in its write
  function now.
- jplayer status is now used to determine playback_active (which is no longer
  an observable).
- MakonFM has now a 'jp' field, which contains the jPlayer object.
- Enabled scrolling up again.
- Migrated from $().bind and $().live to $().on.
- Added MakonFM.file_selected() observable, which says whether an audio file
  has been selected yet.
- Clicking the play button now selects a random file.

--- a/MakonFM/root/static/makonfm.css
+++ b/MakonFM/root/static/makonfm.css
@@ -141,3 +141,9 @@ body div.jp-audio {
 .safe-hidden .jplayer-safe-hider {
     visibility: hidden;
 }
+
+.jp-controls .Button {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
